Replacing APA template with edited one

--- a/apa.tex
+++ b/apa.tex
@@ -46,7 +46,7 @@ final=1]
 }
 
 % Add your BibTeX files here. Use source location if you aren't keeping them as the same folder as your document.
-\addbibresource{yourbib.bib}
+\addbibresource{$HOME/latex/bibliography.bib}
 
 % Can help catch outdated code practices by giving you console warnings. Commented out by default so as to not confuse new users.
 %\usepackage[l2tabu]{nag}
@@ -90,3 +90,4 @@ final=1]
   %   You should have received a copy of the GNU General Public License
   %   along with this program.  If not, see <http://www.gnu.org/licenses/>.
   % ===============================================================
+  
