--- a/bibliography.bib
+++ b/bibliography.bib
@@ -53,7 +53,7 @@ abstract = "It is widely acknowledged that employees of an organization are ofte
     year = {2017}
 }
 
-% webpages
+% webpages online
 @online{cveabout2019,
    title =	{About CVE},
    author =	{Mitre},
@@ -135,4 +135,22 @@ abstract = "It is widely acknowledged that employees of an organization are ofte
 	year =	{2018},
 	url =	{https://motherboard.vice.com/en_us/article/vbqax3/hackers-sim-swapping-steal-phone-numbers-instagram-bitcoin},
 	urldate =	{2019-03-16}
+}
+
+@online{shortridge2019infosec,
+	title =	{The infosec reckoning has arrived},
+	author =	{Kelly Shortridge},
+	publisher =	{TechCrunch},
+	year =	{2019},
+	url =	{https://techcrunch.com/2019/02/13/the-infosec-reckoning-has-arrived/},
+	urldate =	{2019-03-23}
+}
+
+@online{icann2019dnssec,
+	title =	{DNSSEC - What is it and why is it important?},
+	author =	{ICANN},
+	publisher =	{ICANN},
+	year =	{2019},
+	url =	{https://www.icann.org/resources/pages/dnssec-what-is-it-why-important-2019-03-05-en},
+	urldate =	{2019-03-23}
 }
