--- a/bibliography.bib
+++ b/bibliography.bib
@@ -53,6 +53,14 @@ abstract = "It is widely acknowledged that employees of an organization are ofte
     year = {2017}
 }
 
+@article{ietf2007openpgp,
+	author =	{J. Callas and L. Donnerhacke and H. Finney and D. Shaw and R. Thayer},
+	journal =	{IETF},
+	title =	{RFC 4880},
+	year =	{2007},
+	url =	{https://tools.ietf.org/html/rfc4880}
+}
+
 % webpages online
 @online{cveabout2019,
    title =	{About CVE},
@@ -147,10 +155,37 @@ abstract = "It is widely acknowledged that employees of an organization are ofte
 }
 
 @online{icann2019dnssec,
-	title =	{DNSSEC - What is it and why is it important?},
+	title =	{{DNSSEC} - What is it and why is it important?},
 	author =	{ICANN},
 	publisher =	{ICANN},
 	year =	{2019},
 	url =	{https://www.icann.org/resources/pages/dnssec-what-is-it-why-important-2019-03-05-en},
+	urldate =	{2019-03-23}
+}
+
+@online{huston2018dnssec,
+	title =	{{DNSSEC 'and' DNS over TLS}},
+	author =	{Geoff Huston},
+	publisher =	{APNIC},
+	year =	{2018},
+	url =	{https://blog.apnic.net/2018/08/20/dnssec-and-dns-over-tls/},
+	urldate =	{2019-03-23}
+}
+
+@online{thomas2004cso,
+	title = {How {IPSec} works, why we need it, and its biggest drawbacks},
+	author =	{John Thomas and Adam J. Elbirt},
+	publisher =	{CSO},
+	year =	{2004},
+	url =	{https://www.csoonline.com/article/2117067/data-protection-ipsec.html},
+	urldate =	{2019-03-23}
+}
+
+@online{goodin2013snowden,
+	title =	{Guardian reporter delayed e-mailing NSA source because crypto is a pain},
+	author =	{Dan Goodin},
+	publisher =	{ArsTechnica},
+	year =	{2013},
+	url =	{https://arstechnica.com/information-technology/2013/06/guardian-reporter-delayed-e-mailing-nsa-source-because-crypto-is-a-pain/},
 	urldate =	{2019-03-23}
 }
