--- a/bibliography.bib
+++ b/bibliography.bib
@@ -60,6 +60,19 @@ abstract = "It is widely acknowledged that employees of an organization are ofte
 	year =	{2007},
 	url =	{https://tools.ietf.org/html/rfc4880}
 }
+@article{ieee2016fdi, 
+author={M. {Thirumarimurugan} and N. {Bagyalakshmi} and P. {Paarkavi}}, 
+booktitle={2016 10th International Conference on Intelligent Systems and Control (ISCO)}, 
+title={Comparison of fault detection and isolation methods: A review}, 
+year={2016}, 
+volume={}, 
+number={}, 
+pages={1-6}, 
+keywords={fault diagnosis;fuzzy set theory;identification;Kalman filters;neurocontrollers;observers;fault detection and isolation;FDI;fault diagnosis system;fault detection and identification;artificial neural network;ANN;observer;fuzzy;Kalman filter;structural analysis;Observers;Kalman filters;Fault detection;Artificial neural networks;Mathematical model;Fault diagnosis;Uncertainty;ANN;Fault;Fuzzy;Kalman filter;Observer;Residual}, 
+doi={10.1109/ISCO.2016.7726957}, 
+ISSN={}, 
+month={Jan}
+}
 
 % webpages online
 @online{cveabout2019,
@@ -187,5 +200,14 @@ abstract = "It is widely acknowledged that employees of an organization are ofte
 	publisher =	{ArsTechnica},
 	year =	{2013},
 	url =	{https://arstechnica.com/information-technology/2013/06/guardian-reporter-delayed-e-mailing-nsa-source-because-crypto-is-a-pain/},
+	urldate =	{2019-03-23}
+}
+
+@online{pornin2011smime,
+	title =	{How does {PGP} differ from {S/MIME}?},
+	author =	{Thomas Pornin},
+	publisher =	{StackOverflow},
+	year =	{2011},
+	url =	{https://security.stackexchange.com/a/7887},
 	urldate =	{2019-03-23}
 }
