--- a/bibliography.bib
+++ b/bibliography.bib
@@ -19,6 +19,7 @@
    edition =   {5},
    volume =    {},
 }
+
 @book{silberschatz2018,
    title =     {Operating System Concepts},
    author =    {Abraham Silberschatz and Greg Gagne and Peter B. Galvin},
@@ -210,4 +211,82 @@ month={Jan}
 	year =	{2011},
 	url =	{https://security.stackexchange.com/a/7887},
 	urldate =	{2019-03-23}
+}
+
+@online{bejtlich2008cso,
+title = {Incident Detection, Response, and Forensics: The Basics},
+author = {Richard Bejtlich},
+publisher = {CSO},
+year = {2008},
+url = {https://www.csoonline.com/article/2119886/incident-detection--response--and-forensics--the-basics.html},
+urldate = {2019-03-23},
+}
+
+@online{cisco2012netflow,
+	title = {Introduction to Cisco {IOS} NetFlow - A Technical Overview},
+	author = {Cisco},
+	publisher = {Cisco},
+	year = {2012},
+	url = {https://www.cisco.com/c/en/us/products/collateral/ios-nx-os-software/ios-netflow/prod_white_paper0900aecd80406232.html},
+	urldate = {2019-03-23},
+}
+
+@online{grimes2018cso,
+	title = {Do you still need a firewall?},
+	author = {Roger A. Grimes},
+	publisher = {CSO},
+	year = {2018},
+	url = {https://www.csoonline.com/article/3301354/do-you-still-need-a-firewall.html},
+	urldate = {2019-03-23},
+}
+
+@online{pfsense2019,
+	title = {pfSense Overview},
+	author = {pfSense},
+	year = {2019},
+	url = {https://www.pfsense.org/about-pfsense/},
+	urldate = {2019-03-23},
+}
+
+@online{lewis2017dyn,
+	title = {The {DDoS} Attack Against {Dyn} One Year Later},
+	author = {Dave Lewis},
+	year = {2017},
+	url = {https://www.forbes.com/sites/davelewis/2017/10/23/the-ddos-attack-against-dyn-one-year-later/#75b5e6011ae9},
+	urldate = {2019-03-23},
+}
+
+@online{langston2017dns,
+	title = {Six Best Practices for Securing a Robust Domain Name System (DNS) Infrastructure},
+	author = {Mark Langston},
+	publisher = {Carnegie Mellon University},
+	year = {2017},
+	url = {https://insights.sei.cmu.edu/sei_blog/2017/02/six-best-practices-for-securing-a-robust-domain-name-system-dns-infrastructure.html},
+	urldate = {2019-03-23},
+}
+
+@online{doctorow2016ntp,
+	title = {The internet's core infrastructure is dangerously unsupported and could crumble (but we can save it!)},
+	author = {Cory Doctorow},
+	publisher = {Boing Boing},
+	year = {2016},
+	url = {https://boingboing.net/2016/11/11/the-internets-core-infrastru.html},
+	urldate = {2019-03-23},
+}
+
+@online{snoke2017ntp,
+	title = {Best Practices for {NTP} Services},
+	author = {Timur Snoke},
+	publisher = {Carnegie Mellon University},
+	year = {2017},
+	url = {https://insights.sei.cmu.edu/sei_blog/2017/04/best-practices-for-ntp-services.html},
+	urldate = {2019-03-23},
+}
+
+@online{cisco2006snmp,
+	title = {Securing Simple Network Management Protocol},
+	author = {Cisco},
+	year = {2006},
+	url = {https://www.cisco.com/c/en/us/support/docs/ip/simple-network-management-protocol-snmp/20370-snmpsecurity-20370.html#topic1},
+	urldate = {2019-03-23},
 }
