--- a/bibliography.bib
+++ b/bibliography.bib
@@ -61,6 +61,15 @@ abstract = "It is widely acknowledged that employees of an organization are ofte
 	year =	{2007},
 	url =	{https://tools.ietf.org/html/rfc4880}
 }
+
+@article{haken2015windows,
+	author = {Ian Haken},
+	title = {Bypassing local {Windows} authentication to defeat full disk encryption},
+	journal = {{Black Hat Europe}},
+	year = {2015},
+	url = {https://www.blackhat.com/docs/eu-15/materials/eu-15-Haken-Bypassing-Local-Windows-Authentication-To-Defeat-Full-Disk-Encryption.pdf},
+}
+
 @article{ieee2016fdi, 
 author={M. {Thirumarimurugan} and N. {Bagyalakshmi} and P. {Paarkavi}}, 
 booktitle={2016 10th International Conference on Intelligent Systems and Control (ISCO)}, 
@@ -289,4 +298,63 @@ urldate = {2019-03-23},
 	year = {2006},
 	url = {https://www.cisco.com/c/en/us/support/docs/ip/simple-network-management-protocol-snmp/20370-snmpsecurity-20370.html#topic1},
 	urldate = {2019-03-23},
+}
+
+@online{estes2018unix,
+	title = {Linux vs. Unix: What's the difference?},
+	author = {Phil Estes},
+	year = {2018},
+	url = {https://opensource.com/article/18/5/differences-between-linux-and-unix},
+	urldate = {2019-03-31},
+}
+
+@online{owasp2015path,
+	title = {Path Traversal},
+	author = {{OWASP}},
+	year = {2015},
+	url = {https://www.owasp.org/index.php/Path_Traversal},
+	urldate = {2019-03-31},
+}
+
+@online{nixcraft2018ssh,
+	title = {Top 20 {OpenSSH} Server Best Security Practices},
+	author = {Vivek Gite},
+	publisher = {{nixCraft}},
+	year = {2018},
+	url = {https://www.cyberciti.biz/tips/linux-unix-bsd-openssh-server-best-practices.html},
+	urldate = {2018-03-31},
+}
+
+@online{nist2018oom,
+	title = {{CVE-2017-18202} Detail},
+	author = {{NIST}},
+	publisher = {{NIST}},
+	year = {2018},
+	url = {https://nvd.nist.gov/vuln/detail/CVE-2017-18202},
+	urldate = {2019-03-31},
+}
+
+@online{debaleena2017,
+	title = {How to Bypass {Windows} 10 Login Password?},
+	author = {Debaleena},
+	year = {2017},
+	url = {https://mywindowshub.com/bypass-windows-10-login-password/},
+	urldate = {2019-03-31},
+}
+
+@online{reino2018null,
+	title = {A new look at null sessions and user enumeration},
+	author = {reino},
+	year = {2018},
+	url = {https://sensepost.com/blog/2018/a-new-look-at-null-sessions-and-user-enumeration/},
+	urldate = {2019-03-31},
+}
+
+@online{microsoft2019macro,
+	title = {Macro malware},
+	author = {Microsoft},
+	publisher = {Microsoft},
+	year = {2019},
+	url = {https://docs.microsoft.com/en-us/windows/security/threat-protection/intelligence/macro-malware},
+	urldate = {2019-03-31},
 }
