--- a/bibliography.bib
+++ b/bibliography.bib
@@ -358,3 +358,29 @@ urldate = {2019-03-23},
 	url = {https://docs.microsoft.com/en-us/windows/security/threat-protection/intelligence/macro-malware},
 	urldate = {2019-03-31},
 }
+
+@online{neal2012flashback,
+	title = {600,000 infected {Macs} are found in botnet},
+	author = {Dave Neal},
+	publisher = {The {Inquirer}},
+	year = {2012},
+	url = {https://www.theinquirer.net/inquirer/news/2166228/600-infected-macs-botnet},
+	urldate = {2019-03-31},
+}
+
+@online{gerwitz2019macpower,
+	title = {The one serious {MacBook Pro} security flaw that nobody is talking about},
+	author = {David Gerwitz},
+	publisher = {{ZDNet}},
+	year = {2018},
+	url = {https://www.zdnet.com/article/the-one-serious-macbook-pro-security-flaw-that-nobody-is-talking-about/},
+	urldate = {2019-03-31},
+}
+
+@online{finjan2017esp,
+	title = {Encapsulating security protocol {(ESPN)}},
+	author = {Finjan},
+	year = {2017},
+	url = {https://blog.finjan.com/encapsulating-security-protocol/},
+	urldate = {2019-03-31},
+}
