--- a/bibliography.bib
+++ b/bibliography.bib
@@ -384,3 +384,11 @@ urldate = {2019-03-23},
 	url = {https://blog.finjan.com/encapsulating-security-protocol/},
 	urldate = {2019-03-31},
 }
+
+@online{helpnet2019malware,
+	title = {For enterprises, malware is the most expensive type of attack},
+	author = {{HelpNet Security}},
+	year = {2019},
+	url = {https://www.helpnetsecurity.com/2019/03/07/cyberattack-cost-2018/},
+	urldate = {2019-04-07},
+}
