--- a/bibliography.bib
+++ b/bibliography.bib
@@ -392,3 +392,27 @@ urldate = {2019-03-23},
 	url = {https://www.helpnetsecurity.com/2019/03/07/cyberattack-cost-2018/},
 	urldate = {2019-04-07},
 }
+
+@online{siciliano2014malware,
+	title = {The Role of Antivirus Software},
+	author = {Robert Siciliano},
+	year = {2014},
+	url = {https://safr.me/blog/2014/08/16/the-role-of-antivirus-software/},
+	urldate = {2019-04-07},
+}
+
+@online{cooper2018hids,
+	title = {{6 best Host-based Intrusion Detection Systems (HIDS) tools}},
+	author = {Stephen Cooper},
+	year = {2018},
+	url = {https://www.comparitech.com/net-admin/hids-tools-software/},
+	urldate = {2019-04-07},
+}
+
+@online{microsoft2018gpo,
+	title = {{Group Policy API}},
+	author = {Microsoft},
+	year = {2018},
+	url = {https://docs.microsoft.com/en-us/previous-versions/windows/desktop/Policy/group-policy-start-page},
+	urldate = {2019-04-07},
+}
