--- a/bibliography.bib
+++ b/bibliography.bib
@@ -31,6 +31,17 @@
    volume =    {},
 }
 
+@book{splaine2002,
+   title =     {Testing Web Security: Assessing the Security of Web Sites and Applications},
+   author =    {Steven Splaine},
+   publisher = {Wiley},
+   isbn =      {0471232815,9780471232810,9780471447832},
+   year =      {2002},
+   series =    {},
+   edition =   {1},
+   volume =    {},
+}
+
 % articles
 @article{metalidou2014human,
 title = "The Human Factor of Information Security: Unintentional Damage Perspective",
