--- a/bibliography.bib
+++ b/bibliography.bib
@@ -427,3 +427,27 @@ urldate = {2019-03-23},
 	url = {https://docs.microsoft.com/en-us/previous-versions/windows/desktop/Policy/group-policy-start-page},
 	urldate = {2019-04-07},
 }
+
+@online{microsoft2011firewall,
+	title = {{Using Windows Firewall}},
+	author = {Microsoft},
+	year = {2011},
+	url = {http://windows.microsoft.com/en-us/windows-xp/help/networking/using-windows-firewall},
+	urldate = {2011-06-11},
+}
+
+@online{symantec2005sygate,
+	title = {{Symantec to acquire Sygate Technologies}},
+	author = {Symantec},
+	year = {2005},
+	url = {https://www.symantec.com/about/newsroom/press-releases/2005/symantec_0816_02},
+	urldate = {2019-04-16},
+}
+
+@online{zonealarmdocs,
+	title = {{ZoneAlarm Firewall}},
+	author = {{ZoneAlarm}},
+	%year = {n.d.},
+	url = {https://www.zonealarm.com/learning-center/firewall/},
+	urldate = {2019-04-16},
+}
