--- a/bibliography.bib
+++ b/bibliography.bib
@@ -43,6 +43,26 @@
 }
 
 % articles
+@article{voldal2019,
+	title = {A Practical Methodology for Implementing a Patch Management Process},
+	author = {Daniel Voldal},
+	journal = {{SANS Institute}},
+	year = {2019},
+}
+
+@article{tom2008,
+title = {Recommended Practice for Patch Management of Control Systems},
+author = {Steven Tom and Dale Christiansen and Dan Berrett},
+abstractNote = {A key component in protecting a nation’s critical infrastructure and key resources is the security of control systems. The term industrial control system refers to supervisory control and data acquisition, process control, distributed control, and any other systems that control, monitor, and manage the nation’s critical infrastructure. Critical Infrastructure and Key Resources (CIKR) consists of electric power generators, transmission systems, transportation systems, dam and water systems, communication systems, chemical and petroleum systems, and other critical systems that cannot tolerate sudden interruptions in service. Simply stated, a control system gathers information and then performs a function based on its established parameters and the information it receives. The patch management of industrial control systems software used in CIKR is inconsistent at best and nonexistent at worst. Patches are important to resolve security vulnerabilities and functional issues. This report recommends patch management practices for consideration and deployment by industrial control systems owners.},
+doi = {10.2172/944885},
+journal = {},
+number = {},
+volume = {},
+place = {United States},
+year = {2008},
+month = {12}
+}
+
 @article{metalidou2014human,
 title = "The Human Factor of Information Security: Unintentional Damage Perspective",
 journal = "Procedia - Social and Behavioral Sciences",
@@ -96,6 +116,31 @@ month={Jan}
 }
 
 % webpages online
+@online{denmark2018,
+	title = {{40 years ago, Deng Xiaoping changed China — and the world}},
+	author = {Abraham Denmark},
+	publisher = {Washington Post},
+	year = {2018},
+	url = {https://www.washingtonpost.com/news/monkey-cage/wp/2018/12/19/40-years-ago-deng-xiaoping-changed-china-and-the-world/?utm_term=.b6868e83e826},
+	urldate = {2019-05-02},
+}
+
+@online{poonnd,
+	title = {{History of China}},
+	author = {Leon Poon},
+	publisher = {{University of Maryland}},
+	url = {http://www.chaos.umd.edu/history/prc.html},
+	urldate = {2019-05-02},
+}
+
+@online{goettl2017,
+	title = {7 patch management practices guaranteed to help protect your data},
+	author = {Chris Goettl},
+	year = {2017},
+	url = {https://www.networkworld.com/article/3192124/7-patch-management-practices-guaranteed-to-help-protect-your-data.html},
+	urldate = {2019-05-02},
+}
+
 @online{cveabout2019,
    title =	{About CVE},
    author =	{Mitre},
