--- a/bibliography.bib
+++ b/bibliography.bib
@@ -116,6 +116,15 @@ month={Jan}
 }
 
 % webpages online
+@online{sullivan2019,
+	title = {{As China Hacked, U.S. Businesses Turned a Blind Eye}},
+	author = {Laura Sullivan},
+	publisher = {{NPR}},
+	year = {2019},
+	url = {https://www.npr.org/2019/04/12/711779130/as-china-hacked-u-s-businesses-turned-a-blind-eye},
+	urldate = {2019-05-02},
+}
+
 @online{denmark2018,
 	title = {{40 years ago, Deng Xiaoping changed China — and the world}},
 	author = {Abraham Denmark},
