--- a/bibliography.bib
+++ b/bibliography.bib
@@ -43,6 +43,14 @@
 }
 
 % articles
+@article{pwc2017cloudhop,
+	title = {{Operation Cloud Hopper}},
+	author = {{PwC}},
+	journal = {{PwC}},
+	year = {2017},
+	month = {4},
+}
+
 @article{voldal2019,
 	title = {A Practical Methodology for Implementing a Patch Management Process},
 	author = {Daniel Voldal},
@@ -116,6 +124,33 @@ month={Jan}
 }
 
 % webpages online
+@online{cimpanu2018apt,
+	title = {{US charges two Chinese nationals for hacking cloud providers, NASA, the US Navy}},
+	author = {Catalin Cimpanu},
+	publisher = {{ZDNet}},
+	year = {2018},
+	url = {https://www.zdnet.com/article/us-charges-two-chinese-nationals-for-hacking-cloud-providers-nasa-the-us-navy/},
+	urldate = {2019-05-04},
+}
+
+@online{warren2017ccleaner,
+	title = {{Hackers hid malware in CCleaner software}},
+	author = {Tom Warren},
+	publisher = {The Verge},
+	year = {2017},
+	url = {https://www.theverge.com/2017/9/18/16325202/ccleaner-hack-malware-security},
+	urldate = {2019-05-04},
+}
+
+@online{greenberg2017china,
+	title = {CHINA TESTS THE LIMITS OF ITS US HACKING TRUCE},
+	author = {Andy Greenberg},
+	publisher = {Wired},
+	year = {2017},
+	url = {https://www.wired.com/story/china-tests-limits-of-us-hacking-truce/},
+	urldate = {2019-05-04},
+}
+
 @online{sullivan2019,
 	title = {{As China Hacked, U.S. Businesses Turned a Blind Eye}},
 	author = {Laura Sullivan},
