--- a/bibliography.bib
+++ b/bibliography.bib
@@ -124,6 +124,15 @@ month={Jan}
 }
 
 % webpages online
+@online{barrett2018apt,
+	title = {{How China's elite hackers stole the world's most valuable secrets}},
+	author = {Brian Barrett},
+	publisher = {Wired},
+	year = {2018},
+	url = {https://www.wired.com/story/doj-indictment-chinese-hackers-apt10/},
+	urldate = {2019-05-04},
+}
+
 @online{cimpanu2018apt,
 	title = {{US charges two Chinese nationals for hacking cloud providers, NASA, the US Navy}},
 	author = {Catalin Cimpanu},
