--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,12 @@
 % textbooks
+@book{clarke2010cyberwar,
+	title = {Cyberwar: The Next Threat to National Security \& What to Do About It},
+	author = {Richard A. Clarke and Robert Knake},
+	publisher = {Ecco},
+	isbn = {0061962236},
+	year = {2010},
+}
+
 @book{kizza2017,
    title =     {Guide to Computer Network Security},
    author =    {Joseph Migga Kizza},
@@ -124,6 +132,24 @@ month={Jan}
 }
 
 % webpages online
+@online{nichols2019power,
+	title = {{Jeez, what a Huawei to go: Now US senators want Chinese kit ripped out of national leccy grid}},
+	author = {Shaun Nichols},
+	publisher = {The Register},
+	year = {2019},
+	url = {https://www.theregister.co.uk/2019/02/25/huawei_us_electric_grid/},
+	urldate = {2019-05-05},
+}
+
+@online{reuters2019dutch,
+	title = {{Dutch security agency warns against using ‘undesirable’ Chinese, Russian technology, citing hacking risk}},
+	author = {Reuters},
+	publisher = {South China Morning Post},
+	year = {2019},
+	url = {https://www.scmp.com/news/world/europe/article/3004389/dutch-security-agency-warns-against-using-undesirable-chinese},
+	urldate = {2019-05-05},
+}
+
 @online{barrett2018apt,
 	title = {{How China's elite hackers stole the world's most valuable secrets}},
 	author = {Brian Barrett},
