--- a/bibliography.bib
+++ b/bibliography.bib
@@ -51,6 +51,14 @@
 }
 
 % articles
+@article{sans2003giac,
+	title = {Operating System Security and Secure Operating Systems},
+	author = {Cui-Qing Yang},
+	journal = {{SANS}},
+	year = {2003},
+	month = {1},
+}
+
 @article{pwc2017cloudhop,
 	title = {{Operation Cloud Hopper}},
 	author = {{PwC}},
@@ -132,6 +140,76 @@ month={Jan}
 }
 
 % webpages online
+@online{housegovcoppa,
+	title = {{15 USC 6501: Definitions}},
+	author = {House.gov},
+	url = {http://uscode.house.gov/view.xhtml?req=granuleid%3AUSC-prelim-title15-section6501&edition=prelim},
+	urldate = {2019-05-05},
+	year = {2019},
+}
+
+@online{pcissc2010,
+	title = {{PCI DSS Quick Reference Guide}},
+	author = {PCI-SCC},
+	year = {2010},
+	url = {https://www.pcisecuritystandards.org/documents/PCI%20SSC%20Quick%20Reference%20Guide.pdf},
+	urldate = {2019-05-05},
+}
+
+@online{ftccanspam,
+	title = {{CAN-SPAM ACt: A Compliance Guide for Business}},
+	author = {FTC},
+	url = {https://www.ftc.gov/tips-advice/business-center/guidance/can-spam-act-compliance-guide-business},
+	urldate = {2019-05-05},
+}
+
+@online{kernelorg2019,
+	title = {Memory Management},
+	author = {Kernel.org},
+	year = {2019},
+	url = {https://www.kernel.org/doc/html/latest/admin-guide/mm/index.html},
+	urldate = {2019-05-05},
+}
+
+@online{arzt2016,
+	title = {Encrypting data at rest on servers: what does it get you?},
+	author = {Noam Arzt and Michael Berry},
+	year = {2016},
+	url = {https://www.hln.com/encrypting-data-at-rest-on-servers-what-does-it-get-you/index.html},
+	urldate = {2019-05-05},
+}
+
+@online{gite2006,
+	title = {{llow A Normal User To Run Commands As root Under Linux / UNIX Operating Systems.}},
+	author = {Vivek Gite},
+	year = {2006},
+	url = {https://www.cyberciti.biz/tips/allow-a-normal-user-to-run-commands-as-root.html},
+	urldate = {2019-04-05},
+}
+
+@online{redhat2019iptables,
+	title = {{Chapter 7. System Auditing}},
+	author = {RedHat},
+	urldate = {2019-04-05},
+	url = {https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/6/html/security_guide/chap-system_auditing},
+}
+
+@online{reguly2018,
+	author = {Tyler Reguly},
+	title = {Save the Embarrassment: The Value of Two-Factor Authentication},
+	year = {2018},
+	urldate = {2019-04-05},
+	url = {https://www.tripwire.com/state-of-security/security-data-protection/value-two-factor-authentication/},
+}
+
+@online{whittaker2018equifax,
+	author = {Zack Whittaker},
+	title = {{Equifax breach was ‘entirely preventable’ had it used basic security measures, says House report}},
+	year = {2018},
+	urldate = {2019-04-05},
+	url = {https://techcrunch.com/2018/12/10/equifax-breach-preventable-house-oversight-report/},
+}
+
 @online{nichols2019power,
 	title = {{Jeez, what a Huawei to go: Now US senators want Chinese kit ripped out of national leccy grid}},
 	author = {Shaun Nichols},
