--- a/bibliography.bib
+++ b/bibliography.bib
@@ -51,6 +51,13 @@
 }
 
 % articles
+@article{katrina2006,
+	title = {The federal response to {Hurricane Katrina}},
+	author = {{United States Executive Office of the President} and {United States Assistant to the President for Homeland Security and Counterterrorism}},
+	journal = {{White House}},
+	year = {2006},
+	place = {Washington DC},
+}
 @article{sans2003giac,
 	title = {Operating System Security and Secure Operating Systems},
 	author = {Cui-Qing Yang},
