--- a/bibliography.bib
+++ b/bibliography.bib
@@ -51,9 +51,15 @@
 }
 
 % articles
+@article{congress2005interop,
+	title = {{Hurricane Katrina} and Communications Interoperability},
+	author = {{109th Congress}},
+	publisher = {United States Senate},
+	year = {2005},
+}
 @article{katrina2006,
 	title = {The federal response to {Hurricane Katrina}},
-	author = {{United States Executive Office of the President} and {United States Assistant to the President for Homeland Security and Counterterrorism}},
+	author = {{United States Executive Office of the President}},
 	journal = {{White House}},
 	year = {2006},
 	place = {Washington DC},
@@ -147,6 +153,30 @@ month={Jan}
 }
 
 % webpages online
+@online{afcea2005katrina,
+	title = {{Hurricane Katrina} Represents a Failure to Communicate},
+	url = {https://www.afcea.org/content/hurricane-katrina-represents-failure-communicate},
+	urldate = {2019-07-14},
+	year = {2005},
+	author = {Col. Alan D. Campen},
+}
+
+@online{cnn2005bureaucracy,
+	title = {People making decisions hesitated},
+	url = {http://www.cnn.com/2005/US/09/13/katrina.response/},
+	urldate = {2019-07-14},
+	year = {2005},
+	author = {{CNN}},
+}
+
+@online{aberle2017ham,
+	title = {Ham Radio in Emergency Operations},
+	author = {Steve Aberle},
+	url = {https://www.domesticpreparedness.com/preparedness/ham-radio-in-emergency-operations/},
+	urldate = {2019-07-14},
+	year = {2017},
+}
+
 @online{housegovcoppa,
 	title = {{15 USC 6501: Definitions}},
 	author = {House.gov},
