--- a/bibliography.bib
+++ b/bibliography.bib
@@ -153,6 +153,22 @@ month={Jan}
 }
 
 % webpages online
+@online{cohen2018subway,
+	title = {{The New York City subway in fascinating facts and figures}},
+	url = {https://www.6sqft.com/the-new-york-city-subway-in-fascinating-facts-and-figures/},
+	urldate = {2019-07-30},
+	year = {2018},
+	author = {Michelle Cohen},
+}
+
+@online{marton2015garbage,
+	title = {Today in {NYC} history: The Great Garbage Strike of 1968},
+	url = {https://untappedcities.com/2015/02/11/today-in-nyc-history-the-great-garbage-strike-of-1968/},
+	urldate = {2019-07-30},
+	year = {2015},
+	author = {Janos Marton},
+}
+	
 @online{afcea2005katrina,
 	title = {{Hurricane Katrina} Represents a Failure to Communicate},
 	url = {https://www.afcea.org/content/hurricane-katrina-represents-failure-communicate},
