--- a/bibliography.bib
+++ b/bibliography.bib
@@ -153,6 +153,14 @@ month={Jan}
 }
 
 % webpages online
+@online{dhs2015nipp,
+	title = {Transportation Systems Sector-Specific Plan},
+	url = {https://www.dhs.gov/sites/default/files/publications/nipp-ssp-transportation-systems-2015-508.pdf},
+	urldate = {2019-07-30},
+	year = {2015},
+	author = {{Department of Homeland Security}},
+}
+	
 @online{cohen2018subway,
 	title = {{The New York City subway in fascinating facts and figures}},
 	url = {https://www.6sqft.com/the-new-york-city-subway-in-fascinating-facts-and-figures/},
@@ -167,6 +175,14 @@ month={Jan}
 	urldate = {2019-07-30},
 	year = {2015},
 	author = {Janos Marton},
+}
+
+@online{cuomo2017partner,
+	title = {Governor {Cuomo} Announces Launch of Subway Partnership Program},
+	url = {https://www.governor.ny.gov/news/governor-cuomo-announces-launch-subway-partnership-program},
+	urldate = {2019-07-30},
+	year = {2019},
+	author = {Andrew M. Cuomo},
 }
 	
 @online{afcea2005katrina,
