--- a/bibliography.bib
+++ b/bibliography.bib
@@ -153,7 +153,23 @@ month={Jan}
 }
 
 % webpages online
-<<<<<<< Updated upstream
+
+@online{iit2019ptisac,
+	title = {{Public Transportation ISAC (PT-ISAC)}},
+	url = {https://www.iit-corp.com/public-transportation-isac-pt-isac/},
+	urldate = {2019-07-30},
+	year = {2019},
+	author = {{IIT}},
+}
+
+@online{ap2012sandy,
+	title = {{Cuomo: Superstorm Sandy Damage Could Total \$33 Billion In New York}},
+	url = {https://newyork.cbslocal.com/2012/11/08/cuomo-superstorm-sandy-damage-could-total-33-billion-in-new-york/},
+	urldate = {2019-07-30},
+	year = {2012},
+	author = {{Associated Press}},
+}
+
 @online{dhs2015nipp,
 	title = {Transportation Systems Sector-Specific Plan},
 	url = {https://www.dhs.gov/sites/default/files/publications/nipp-ssp-transportation-systems-2015-508.pdf},
