--- a/bibliography.bib
+++ b/bibliography.bib
@@ -51,12 +51,26 @@
 }
 
 % articles
+@article{szinicz2005chemical,
+	title = {History of chemical and biological warfare agents},
+	year = {2005},
+	author = {L. Szinicz},
+	publisher = {Bundeswehr Institute of Pharmacology and Toxicology},
+	journal = {Toxicology},
+	number = {3},
+	volume = {214},
+	doi = {10.1016/j.tox.2005.06.011},
+	pages = {167 - 181},
+	place = {Munich, Germany},
+}
+
 @article{congress2005interop,
 	title = {{Hurricane Katrina} and Communications Interoperability},
 	author = {{109th Congress}},
 	publisher = {United States Senate},
 	year = {2005},
 }
+
 @article{katrina2006,
 	title = {The federal response to {Hurricane Katrina}},
 	author = {{United States Executive Office of the President}},
@@ -153,7 +167,29 @@ month={Jan}
 }
 
 % webpages online
-<<<<<<< Updated upstream
+@online{everts2015chemical,
+	title = {A Brief History of Chemical War},
+	author = {Sarah Everts},
+	urldate = {2015-05-11},
+	year = {2019},
+	url = {https://www.sciencehistory.org/distillations/a-brief-history-of-chemical-war},
+}
+
+@online{peplow2015century,
+	title = {A century of chemical warfare: nations reflect on grim anniversary},
+	url = {https://www.nature.com/news/a-century-of-chemical-warfare-nations-reflect-on-grim-anniversary-1.17381},
+	urldate = {2015-04-22},
+	year = {2019},
+	author = {Mark Peplow},
+}
+
+@online{opcwwhatis,
+	title = {What is a Chemical Weapon?},
+	url = {https://www.opcw.org/our-work/what-chemical-weapon},
+	urldate = {2019},
+	year = {2019},
+	author = {{OPCW}},
+}
 
 @online{iit2019ptisac,
 	title = {{Public Transportation ISAC (PT-ISAC)}},
