--- a/bibliography.bib
+++ b/bibliography.bib
@@ -51,6 +51,14 @@
 }
 
 % articles
+@article{cnas2011aum,
+	title = {{Aum Shinrikyo}: Insights Into How Terrorists Develop Biological and Chemical Weapons},
+	year = {2011},
+	author = {Richard Danzig and Marc Sageman and Terrance Leighton},
+	publisher = {Center for a New American Security},
+	volume = {July 2011},
+
+}
 @article{szinicz2005chemical,
 	title = {History of chemical and biological warfare agents},
 	year = {2005},
@@ -167,6 +175,30 @@ month={Jan}
 }
 
 % webpages online
+@online{dhschemical,
+	title = {News \& Terrorism: Communicating in a Crisis},
+	author = {{Department of Homeland Security}},
+	urldate = {2019},
+	year = {2019},
+	url = {https://www.dhs.gov/xlibrary/assets/prep_chemical_fact_sheet.pdf},
+}
+
+@online{ward2019skripal,
+	title = {Trump sanctions {Russia} again over chemical weapons attack in {UK}},
+	author = {Alex Ward},
+	urldate = {2019-04-02},
+	year = {2019},
+	url = {https://www.vox.com/2019/8/2/20751664/trump-sanctions-russia-chemical-attack-skripal},
+}
+
+@online{hamblin2013sarin,
+	title = {What Does Sarin Do to People?},
+	author = {James Hamblin},
+	urldate = {2013-05-06},
+	year = {2013},
+	url = {https://www.theatlantic.com/health/archive/2013/05/what-does-sarin-do-to-people/275577/},
+}
+
 @online{everts2015chemical,
 	title = {A Brief History of Chemical War},
 	author = {Sarah Everts},
