--- a/bibliography.bib
+++ b/bibliography.bib
@@ -175,6 +175,38 @@ month={Jan}
 }
 
 % webpages online
+@online{gordon2018mta,
+	title = {The {MTA}'s Plan To Fix The Subway Will Cost A Fortune. Doing Nothing Will Cost Even More},
+	author = {Aaron Gordon},
+	urldate = {2018-06-05},
+	year = {2019},
+	url = {https://gothamist.com/2018/06/05/subway_fast_foward_cost.php},
+}
+
+@online{rapier2019flood,
+	title = {Some of {New York}'s busiest subway stations flooded after a rainstorm, and commuters were furious},
+	author = {Graham Rapier},
+	urldate = {2019-06-21},
+	year = {2019},
+	url = {https://www.businessinsider.com/new-york-city-subway-stations-flood-during-rain-angering-commuters-2019-6},
+}
+
+@online{hinds2012mta,
+	title = {{Totaling Sandy Losses: How New York's MTA Got to \$5 Billion}},
+	author = {Kate Hinds},
+	urldate = {2012-11-27},
+	year = {2019},
+	url = {https://www.wnyc.org/story/286877-totalling-sandy-losses-how-new-yorks-mta-got-to-5-billion/},
+}
+
+@online{mtaferrysouth,
+	title = {{MTA NYC Transit Reopens the Old South Ferry Loop Station}},
+	author = {{MTA}},
+	urldate = {2013},
+	year = {2013},
+	url = {http://web.mta.info/nyct/service/SouthFerryStationReopenApril2013.htm},
+}
+
 @online{dhschemical,
 	title = {News \& Terrorism: Communicating in a Crisis},
 	author = {{Department of Homeland Security}},
