--- a/bibliography.bib
+++ b/bibliography.bib
@@ -51,6 +51,17 @@
 }
 
 % articles
+@article{anderson2004managing,
+	title = {Managing in a Dangerous World—The National Incident Management System},
+	year = {2004},
+	journal = {Engineering Management Journal},
+	author = {Anice I. Anderson and Dennis Compton and Tom Mason},
+	volume = {16},
+	number = {4},
+	doi = {10.1080/10429247.2004.11415260},
+	pages = {3 - 9},
+}
+
 @article{cnas2011aum,
 	title = {{Aum Shinrikyo}: Insights Into How Terrorists Develop Biological and Chemical Weapons},
 	year = {2011},
@@ -175,6 +186,14 @@ month={Jan}
 }
 
 % webpages online
+@online{femaabout,
+	title = {About the Agency},
+	author = {{FEMA}},
+	urldate = {2019-06-03},
+	year = {2019},
+	url = {https://www.fema.gov/about-agency},
+}
+
 @online{gordon2018mta,
 	title = {The {MTA}'s Plan To Fix The Subway Will Cost A Fortune. Doing Nothing Will Cost Even More},
 	author = {Aaron Gordon},
