--- a/bibliography.bib
+++ b/bibliography.bib
@@ -51,6 +51,32 @@
 }
 
 % articles
+@article{palen2017socialmedia,
+	author = {Leysia Palen and Amanda L. Hughes},
+	title = {Social Media in Disaster Communications},
+	journal = {Handbooks of Sociology and Social Research},
+	year = {2017},
+	pages = {497 - 518},
+	doi = {10.1007/978-3-319-63254-4_24},
+}
+
+@article{hjorth2011goodgrief,
+author = { Larissa   Hjorth  and  Kyoung-Hwa   Yonnie   Kim },
+title = {Good grief: the role of social mobile media in the 3.11 earthquake disaster in Japan},
+journal = {Digital Creativity},
+volume = {22},
+number = {3},
+pages = {187-199},
+year  = {2011},
+publisher = {Routledge},
+doi = {10.1080/14626268.2011.604640},
+URL = { 
+        https://doi.org/10.1080/14626268.2011.604640
+},
+eprint = { 
+        https://doi.org/10.1080/14626268.2011.604640
+}
+}
 @article{anderson2004managing,
 	title = {Managing in a Dangerous World—The National Incident Management System},
 	year = {2004},
@@ -186,6 +212,54 @@ month={Jan}
 }
 
 % webpages online
+@online{haddow2015boston,
+	title = {Social Media and the Boston Marathon Bombings: A Case Study},
+	author = {George Haddow and Kim Haddow},
+	urldate = {2015-06-04},
+	year = {2015},
+	url = {http://scitechconnect.elsevier.com/social-marathon/},
+}
+
+@online{pelofsky2007virginia,
+	title = {Facebook becomes bulletin board for {Virginia Tech}},
+	author = {Jeremy Pelofsky},
+	urldate = {2007-04-18},
+	year = {2007},
+	url = {https://www.reuters.com/article/us-usa-crime-shootings-facebook/facebook-becomes-bulletin-board-for-virginia-tech-idUSN1742895920070418},
+}
+	
+@online{epatko2010haiti,
+	title = {Haiti Quake Propels Use of Twitter as Disaster-Relief Tool},
+	author = {Larisa Epatko},
+	urldate = {2010-02-16},
+	year = {2010},
+	url = {https://www.pbs.org/newshour/world/haiti-quake-propels-twitter-community-mapping-efforts},
+}
+
+@online{slater2012social,
+	title = {Social Media, Information and Political Activism in Japan’s 3.11 Crisis},
+	author = {David H. Slater and Nishimura Keiko and Love Kindstrand},
+	urldate = {2012-06-07},
+	year = {2012},
+	url = {https://apjjf.org/2012/10/24/David-H.-Slater/3762/article.html},
+}
+
+@online{oskin2017japan,
+	title = {Japan Earthquake \& Tsunami of 2011: Facts and Information},
+	author = {Becky Oskin},
+	urldate = {2017-09-13},
+	year = {2017},
+	url = {https://www.livescience.com/39110-japan-2011-earthquake-tsunami-facts.html},
+}
+
+@online{loiaconi2017harvey,
+	title = {Hurricane Harvey shows benefits, risks of turning to social media in a disaster},
+	author = {Stephen Loiaconi},
+	urldate = {2017-08-28},
+	year = {2017},
+	url = {https://wjla.com/news/nation-world/hurricane-harvey-shows-benefits-risks-of-turning-to-social-media-in-disaster},
+}
+
 @online{whatisnims,
 	title = {National Incident Management System},
 	author = {{DHS}},
@@ -199,14 +273,6 @@ month={Jan}
 	urldate = {2004-11-23},
 	year = {2004},
 	url = {https://www.fema.gov/txt/nims/nims_ics_position_paper.txt},
-=======
-@online{femanims, 
-	title = {{NIMS and the Incident Command System}},
-	url = {https://www.fema.gov/txt/nims/nims_ics_position_paper.txt},
-	author = {{FEMA}},
-	urldate = {2004=11-23},
-	year = {2004},
->>>>>>> Stashed changes
 }
 
 @online{femaabout,
@@ -345,11 +411,6 @@ month={Jan}
 	author = {Andrew M. Cuomo},
 }
 	
-=======
-=======
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
 @online{cisa2019nccic,
 	title = {About Us},
 	url = {https://www.us-cert.gov/about-us},
@@ -374,13 +435,6 @@ month={Jan}
 	author = {Bill Bearden},
 }
 
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
 @online{afcea2005katrina,
 	title = {{Hurricane Katrina} Represents a Failure to Communicate},
 	url = {https://www.afcea.org/content/hurricane-katrina-represents-failure-communicate},
