--- a/bibliography.bib
+++ b/bibliography.bib
@@ -51,6 +51,15 @@
 }
 
 % articles
+@article{himescornell2018factors,
+	title = {Factors Affecting Disaster Preparedness, Response, and Recovery Using the Community Capitals Framework},
+	author = {Amber Himes-Cornell and Carlos Ormond},
+	journal = {Coastal Management},
+	year = {2018},
+	pages = {1-24},
+	doi = {10.1080/08920753.2018.1498709},
+}
+
 @article{palen2017socialmedia,
 	author = {Leysia Palen and Amanda L. Hughes},
 	title = {Social Media in Disaster Communications},
