--- a/bibliography.bib
+++ b/bibliography.bib
@@ -56,7 +56,7 @@
 	author = {Amber Himes-Cornell and Carlos Ormond},
 	journal = {Coastal Management},
 	year = {2018},
-	pages = {1-24},
+	pages = {1 - 24},
 	doi = {10.1080/08920753.2018.1498709},
 }
 
@@ -221,8 +221,22 @@ month={Jan}
 }
 
 % webpages online
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
+@online{ferris2019congress,
+	title = {Another {GOP} lawmaker blocks massive disaster aid package},
+	url = {https://www.politico.com/story/2019/05/28/another-gop-lawmaker-blocks-massive-disaster-aid-package-1345524},
+	urldate = {2019-05-28},
+	year = {2019},
+	author = {Sarah Ferris and Jennifer Scholtes},
+}
+
+@online{pew2018spending,
+	title = {What We Don't Know About State Spending on Natural Disasters Could Cost Us},
+	url = {https://www.pewtrusts.org/en/research-and-analysis/reports/2018/06/19/what-we-dont-know-about-state-spending-on-natural-disasters-could-cost-us},
+	urldate = {2018-06-19},
+	year = {2018},
+	author = {Pew},
+}
+
 @online{haddow2015boston,
 	title = {Social Media and the Boston Marathon Bombings: A Case Study},
 	author = {George Haddow and Kim Haddow},
@@ -284,20 +298,6 @@ month={Jan}
 	urldate = {2004-11-23},
 	year = {2004},
 	url = {https://www.fema.gov/txt/nims/nims_ics_position_paper.txt},
-=======
-<<<<<<< Updated upstream
-=======
->>>>>>> Stashed changes
-@online{femanims, 
-	title = {{NIMS and the Incident Command System}},
-	url = {https://www.fema.gov/txt/nims/nims_ics_position_paper.txt},
-	author = {{FEMA}},
-	urldate = {2004=11-23},
-	year = {2004},
-<<<<<<< Updated upstream
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
 }
 
 @online{femaabout,
